# space

./: .gitignore  Makefile.am  README  configure.ac
data/: properties  test
data/default/: languages
data/module/default/: language  language_labels  module
data/module/default/resource/: label
data/module/default/resources/: labels  labels_en  labels_en_gb
data/module/space/: module
data/module/space/maps/: cloud.py
data/module/space/resource/planet/gas_giant_01/: descriptor
data/module/space/resource/star/main_sequence_yellow_01/: descriptor  star
src/core/: CharacterBuffer.h  Language.cpp  Language.h  Makefile  Makefile.am  Makefile.in  Metrics.h  Parser.h  Path.cpp  Path.h  Properties.cpp  Properties.h  Resource.cpp  Resource.h  String.h  StringBundle.cpp  StringBundle.h  Temp.cpp  Temp.h  Unicode.cpp  Unicode.h  Window.cpp  Window.h
src/json/: JSONNode.h  JSONParser.h  JSONReader.cpp  JSONReader.h  JSONTokens.cpp  JSONTokens.h  JSONTree.cpp  JSONTree.h  JSONTreeBuilder.cpp  JSONTreeBuilder.h  JSONType.cpp  JSONType.h  JSONTypePolicy.h  JSONWriter.h  Makefile.am
src/main/: Application.cpp  Application.h  Data.cpp  Data.h  Feature.cpp  Feature.h  Graphics.cpp  Graphics.h  IO.cpp  IO.h  Makefile.am  MapGenerator.cpp  MapGenerator.h  Module.cpp  Module.h  Orbit.cpp  Orbit.h  Path.cpp  Path.h  ResourceIndexer.cpp  ResourceIndexer.h  Script.cpp  Script.h  Session.cpp  Session.h  Settings.cpp  Settings.h  Star.cpp  Star.h  System.h  Texture.cpp  Texture.h  Window.cpp  Window.h  main.cpp
